Refactor jira polling service to improve readablity and abstraction

--- a/.env.test
+++ b/.env.test
@@ -13,7 +13,7 @@ EVERGREEN_API_KEY=mysecret
 # Sage Bot 
 JIRA_BASE_URL=https://jira.example.com
 JIRA_API_TOKEN=test-token
-SAGE_BOT_SUPPORTED_PROJECTS=DEVPROD,TEST
+SAGE_BOT_SUPPORTED_PROJECTS=DEVPROD,CLOUDP,AMP,DOCSP
 
 # Disable Sentry in tests
 SENTRY_ENABLED=false
