--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "mongodb": "^6.18.0",
     "query-string": "^9.3.1",
     "uuid": "^13.0.0",
+    "voyageai": "^0.1.0",
     "winston": "^3.18.3",
     "yarn": "^1.22.22",
     "zod": "^4.1.12"
