--- a/package.json
+++ b/package.json
@@ -46,15 +46,15 @@
     "@ai-sdk/azure": "^2.0.89",
     "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/ai-sdk": "^1.0.0-beta.12",
-    "@mastra/braintrust": "^1.0.0-beta.10",
-    "@mastra/core": "^1.0.0-beta.19",
-    "@mastra/loggers": "^1.0.0-beta.3",
-    "@mastra/memory": "^1.0.0-beta.10",
-    "@mastra/mongodb": "^1.0.0-beta.9",
-    "@mastra/observability": "^1.0.0-beta.5",
-    "@mastra/rag": "^2.0.0-beta.4",
-    "@mastra/server": "^2.0.4",
+    "@mastra/ai-sdk": "^1.0.0-beta.14",
+    "@mastra/braintrust": "^1.0.0-beta.12",
+    "@mastra/core": "^1.0.0-beta.21",
+    "@mastra/loggers": "^1.0.0-beta.4",
+    "@mastra/memory": "^1.0.0-beta.12",
+    "@mastra/mongodb": "^1.0.0-beta.11",
+    "@mastra/observability": "^1.0.0-beta.10",
+    "@mastra/rag": "^2.0.0-beta.6",
+    "@mastra/server": "^1.0.0-beta.21",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.3",
     "@opentelemetry/core": "^2.2.0",
