--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@mastra/mongodb": "^1.0.0-beta.11",
     "@mastra/observability": "^1.0.0-beta.5",
     "@mastra/rag": "^2.0.0-beta.6",
-    "@mastra/server": "^2.0.4",
+    "@mastra/server": "^1.0.0-beta.21",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.3",
     "@opentelemetry/core": "^2.3.0",
@@ -68,7 +68,7 @@
     "@sentry/node": "10.32.1",
     "@sentry/vite-plugin": "^4.6.0",
     "ai": "^5.0.114",
-    "braintrust": "^0.4.9",
+    "braintrust": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
