--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
     "@ai-sdk/azure": "^2.0.89",
     "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/ai-sdk": "^1.0.0-beta.14",
-    "@mastra/braintrust": "^1.0.0-beta.12",
-    "@mastra/core": "^1.0.0-beta.21",
-    "@mastra/loggers": "^1.0.0-beta.4",
-    "@mastra/memory": "^1.0.0-beta.12",
-    "@mastra/mongodb": "^1.0.0-beta.11",
-    "@mastra/observability": "^1.0.0-beta.5",
-    "@mastra/rag": "^2.0.0-beta.6",
-    "@mastra/server": "^1.0.0-beta.21",
+    "@mastra/ai-sdk": "^1.0.2",
+    "@mastra/braintrust": "^1.0.0",
+    "@mastra/core": "^1.0.4",
+    "@mastra/loggers": "^1.0.0",
+    "@mastra/memory": "^1.0.0",
+    "@mastra/mongodb": "^1.0.0",
+    "@mastra/observability": "^1.0.0",
+    "@mastra/rag": "^2.0.0",
+    "@mastra/server": "^1.0.4",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.3",
     "@opentelemetry/core": "^2.3.0",
@@ -68,7 +68,7 @@
     "@sentry/node": "10.32.1",
     "@sentry/vite-plugin": "^4.6.0",
     "ai": "^5.0.114",
-    "braintrust": "^1.1.0",
+    "braintrust": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
