Set voyage api key

--- a/.env.defaults
+++ b/.env.defaults
@@ -42,3 +42,6 @@ SENTRY_TRACES_SAMPLE_RATE=1.0
 SENTRY_DEBUG=false
 SENTRY_ATTACH_STACKTRACE=true
 SENTRY_CAPTURE_CONSOLE=false
+
+VOYAGE_DEFAULT_MODEL=voyage-4
+VOYAGE_API_KEY=your_voyage_api_key
