--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
     "@ai-sdk/azure": "^2.0.89",
     "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/ai-sdk": "^1.0.2",
-    "@mastra/braintrust": "^1.0.0",
-    "@mastra/core": "^1.0.4",
-    "@mastra/loggers": "^1.0.0",
-    "@mastra/memory": "^1.0.0",
-    "@mastra/mongodb": "^1.0.0",
-    "@mastra/observability": "^1.0.0",
-    "@mastra/rag": "^2.0.0",
-    "@mastra/server": "^1.0.4",
+    "@mastra/ai-sdk": "^1.0.3",
+    "@mastra/braintrust": "^1.0.1",
+    "@mastra/core": "^1.1.0",
+    "@mastra/loggers": "^1.0.1",
+    "@mastra/memory": "^1.0.1",
+    "@mastra/mongodb": "^1.1.0",
+    "@mastra/observability": "^1.1.0",
+    "@mastra/rag": "^2.1.0",
+    "@mastra/server": "^1.1.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.3",
     "@opentelemetry/core": "^2.3.0",
@@ -84,7 +84,7 @@
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "yarn": "^1.22.22",
-    "zod": "^4.1.12"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
@@ -115,7 +115,7 @@
     "husky": "^9.1.7",
     "junit-report-builder": "^5.1.1",
     "lint-staged": "^16.2.3",
-    "mastra": "^1.0.0-beta.9",
+    "mastra": "^1.1.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
