--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
     "mastra:full": "yarn mastra:build && yarn mastra:start",
     "prepare": "husky",
-    "eval": "BRAINTRUST_EVAL=true npx braintrust eval --no-send-logs",
-    "eval:send_to_braintrust": "BRAINTRUST_EVAL=true npx braintrust eval --no-progress-bars",
+    "eval": "BRAINTRUST_EVAL=true npx braintrust eval --no-send-logs --external-packages @mastra/core @mastra/braintrust @mastra/observability @mastra/memory @mastra/mongodb",
+    "eval:send_to_braintrust": "BRAINTRUST_EVAL=true npx braintrust eval --no-progress-bars --external-packages @mastra/core @mastra/braintrust @mastra/observability @mastra/memory @mastra/mongodb",
     "load-dataset-into-braintrust": "vite-node src/evals/scripts/braintrust-dataset-loader.ts"
   },
   "dependencies": {
