DEVPROD-26707 Bump mastra to 1.0 stable release (#251)

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -85,13 +85,15 @@ tasks:
       - func: run-make-background
         vars:
           target: local-evergreen
-      - func: symlink
+      - func: symlink-graphql-schema
       - func: yarn-build
       - func: wait-for-evergreen
       - func: yarn-e2e
   - name: check-mastra-dev-startup
     commands:
       - func: yarn-build
+      - func: yarn-mastra-symlink-env
+      - func: symlink-graphql-schema
       - func: mastra-dev-startup
   - name: check-sage-prod-startup
     commands:
@@ -312,13 +314,22 @@ functions:
           npm install -g yarn
           npm install -g env-cmd
 
-  symlink:
+  symlink-graphql-schema:
     command: shell.exec
     params:
       working_dir: sage
       shell: bash
       script: |
         ln -s ${workdir}/evergreen/graphql/schema ${workdir}/sdlschema
+
+  yarn-mastra-symlink-env:
+    command: shell.exec
+    params:
+      working_dir: sage
+      shell: bash
+      script: |
+        ${PREPARE_SHELL}
+        yarn mastra:symlink-env
 
   wait-for-evergreen:
     command: shell.exec
