--- a/package.json
+++ b/package.json
@@ -37,28 +37,29 @@
     "typecheck": "yarn tsc",
     "test-thinking-agent": "vite-node src/mastra/tests/scripts/test-thinking-agent.ts",
     "chat-with-staging": "vite-node src/mastra/tests/scripts/chat-with-staging.ts",
+    "mastra:symlink-env": "mkdir -p src/mastra/public && for f in .env .env.*; do [ -f \"$f\" ] && ln -sf \"../../../$f\" \"src/mastra/public/$f\"; done",
     "mastra:dev": "mastra dev",
     "mastra:build": "mastra build",
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
     "mastra:full": "yarn mastra:build && yarn mastra:start",
     "prepare": "husky",
-    "eval": "BRAINTRUST_EVAL=true npx braintrust eval --no-send-logs",
-    "eval:send_to_braintrust": "BRAINTRUST_EVAL=true npx braintrust eval --no-progress-bars",
+    "eval": "BRAINTRUST_EVAL=true npx braintrust eval --external-packages @mastra/core @mastra/braintrust @mastra/observability @mastra/memory @mastra/mongodb --no-send-logs",
+    "eval:send_to_braintrust": "BRAINTRUST_EVAL=true npx braintrust eval --external-packages @mastra/core @mastra/braintrust @mastra/observability @mastra/memory @mastra/mongodb --no-progress-bars",
     "load-dataset-into-braintrust": "vite-node src/evals/scripts/braintrust-dataset-loader.ts"
   },
   "dependencies": {
     "@ai-sdk/azure": "^2.0.89",
     "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/ai-sdk": "^1.0.0-beta.9",
-    "@mastra/braintrust": "^1.0.0-beta.6",
-    "@mastra/core": "^1.0.0-beta.13",
-    "@mastra/loggers": "^1.0.0-beta.3",
-    "@mastra/memory": "^1.0.0-beta.5",
-    "@mastra/mongodb": "^1.0.0-beta.7",
-    "@mastra/observability": "^1.0.0-beta.5",
-    "@mastra/rag": "^2.0.0-beta.3",
-    "@mastra/server": "^1.0.0-beta.13",
+    "@mastra/ai-sdk": "^1.0.3",
+    "@mastra/braintrust": "^1.0.2",
+    "@mastra/core": "^1.2.0",
+    "@mastra/loggers": "^1.0.1",
+    "@mastra/memory": "^1.1.0",
+    "@mastra/mongodb": "^1.2.0",
+    "@mastra/observability": "^1.2.0",
+    "@mastra/rag": "^2.1.0",
+    "@mastra/server": "^1.2.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.69.0",
     "@opentelemetry/core": "^2.5.0",
@@ -68,10 +69,10 @@
     "@opentelemetry/sdk-trace-base": "^2.2.0",
     "@opentelemetry/semantic-conventions": "^1.39.0",
     "@opentelemetry/winston-transport": "^0.21.0",
-    "@sentry/node": "10.32.1",
+    "@sentry/node": "10.38.0",
     "@sentry/vite-plugin": "^4.6.0",
     "ai": "^5.0.114",
-    "braintrust": "^0.4.9",
+    "braintrust": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
@@ -82,12 +83,12 @@
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "jira.js": "^5.3.0",
-    "mongodb": "^6.18.0",
+    "mongodb": "7.1.0",
     "query-string": "^9.3.1",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "yarn": "^1.22.22",
-    "zod": "^4.1.12"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
@@ -118,7 +119,7 @@
     "husky": "^9.1.7",
     "junit-report-builder": "^5.1.1",
     "lint-staged": "^16.2.3",
-    "mastra": "^1.0.0-beta.9",
+    "mastra": "^1.2.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
