--- a/environments/cronjobs/staging_deployments.yml
+++ b/environments/cronjobs/staging_deployments.yml
@@ -6,7 +6,7 @@ cronJobs:
     schedule: '* * * * *' # Original schedule (every minute) - disabled via suspend: true
     suspend: true # Disable automatic execution - set to false to re-enable
     concurrencyPolicy: Forbid
-    command: ['yarn', 'poll-jira:staging']
+    command: ['pnpm', 'poll-jira:staging']
     resources:
       requests:
         cpu: 500m
@@ -25,7 +25,7 @@ cronJobs:
     schedule: '* * * * *' # Original schedule (every minute) - disabled via suspend: true
     suspend: true # Disable automatic execution - set to false to re-enable
     concurrencyPolicy: Forbid
-    command: ['yarn', 'poll-cursor-status:staging']
+    command: ['pnpm', 'poll-cursor-status:staging']
     resources:
       requests:
         cpu: 500m
