DEVPROD-26140 Migrate sage to pnpm (#259)

--- a/package.json
+++ b/package.json
@@ -4,48 +4,49 @@
   "description": "evergreen-ai-service",
   "main": "dist/main.js",
   "type": "module",
+  "packageManager": "pnpm@10.27.0",
   "scripts": {
-    "build": "yarn typecheck && vite build",
-    "start": "NODE_ENV=production node dist/main.js",
-    "dev": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=development yarn dev-run",
-    "dev-run": "vite-node --watch src/main.ts",
-    "dev:staging": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=staging dotenv-flow yarn dev-run",
-    "dev:prod": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=production dotenv-flow yarn dev-run",
-    "poll-jira": "vite-node src/services/jira/jobs/pollJiraTicketsJob.ts",
-    "poll-jira:staging": "NODE_ENV=staging dotenv-flow yarn poll-jira",
-    "poll-jira:prod": "NODE_ENV=production dotenv-flow yarn poll-jira",
-    "poll-cursor-status": "vite-node src/services/cursor/jobs/pollCursorAgentStatusJob.ts",
-    "poll-cursor-status:staging": "NODE_ENV=staging dotenv-flow yarn poll-cursor-status",
-    "poll-cursor-status:prod": "NODE_ENV=production dotenv-flow yarn poll-cursor-status",
-    "deploy:staging": "NODE_ENV=staging dotenv-flow -- sh scripts/deploy.sh",
-    "pending-commits": "bash scripts/check-pending-commits.sh",
-    "pending-commits:json": "bash scripts/check-pending-commits.sh --json",
+    "build": "pnpm typecheck && vite build",
+    "chat-with-staging": "vite-node src/mastra/tests/scripts/chat-with-staging.ts",
     "clean": "rm -rf dist bin node_modules",
     "codegen": "graphql-codegen-esm --config graphql.config.ts",
-    "generate-cursor-client": "openapi-ts",
+    "deploy:staging": "NODE_ENV=staging dotenv-flow -- sh scripts/deploy.sh",
+    "dev-run": "vite-node --watch src/main.ts",
+    "dev:prod": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=production dotenv-flow pnpm dev-run",
+    "dev:staging": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=staging dotenv-flow pnpm dev-run",
+    "dev": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=development pnpm dev-run",
     "e2e": "vitest --project e2e",
-    "test": "vitest --project unit",
-    "test:ui": "yarn test --ui",
-    "test:run": "yarn test run",
-    "test:coverage": "yarn test --coverage",
-    "eslint:fix": "yarn eslint:strict --fix",
+    "eslint:fix": "pnpm eslint:strict --fix",
     "eslint:staged": "STRICT=1 eslint",
     "eslint:strict": "STRICT=1 eslint .",
     "format": "prettier --write src/**/*.ts \"**/*.md\" \"*.md\"",
     "format:check": "prettier --check src/**/*.ts \"**/*.md\" \"*.md\"",
+    "generate-cursor-client": "openapi-ts",
     "run-analyzer": "vite-node src/mastra/tests/scripts/run-log-analyzer.ts",
-    "typecheck": "yarn tsc",
+    "typecheck": "tsc",
     "test-thinking-agent": "vite-node src/mastra/tests/scripts/test-thinking-agent.ts",
-    "chat-with-staging": "vite-node src/mastra/tests/scripts/chat-with-staging.ts",
     "mastra:symlink-env": "mkdir -p src/mastra/public && for f in .env .env.*; do [ -f \"$f\" ] && ln -sf \"../../../$f\" \"src/mastra/public/$f\"; done",
     "mastra:dev": "mastra dev",
     "mastra:build": "mastra build",
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
-    "mastra:full": "yarn mastra:build && yarn mastra:start",
+    "mastra:full": "pnpm mastra:build && pnpm mastra:start",
     "prepare": "husky",
     "eval": "BRAINTRUST_EVAL=true npx braintrust eval --external-packages @mastra/core @mastra/braintrust @mastra/observability @mastra/memory @mastra/mongodb --no-send-logs",
     "eval:send_to_braintrust": "BRAINTRUST_EVAL=true npx braintrust eval --external-packages @mastra/core @mastra/braintrust @mastra/observability @mastra/memory @mastra/mongodb --no-progress-bars",
-    "load-dataset-into-braintrust": "vite-node src/evals/scripts/braintrust-dataset-loader.ts"
+    "load-dataset-into-braintrust": "vite-node src/evals/scripts/braintrust-dataset-loader.ts",
+    "pending-commits:json": "bash scripts/check-pending-commits.sh --json",
+    "pending-commits": "bash scripts/check-pending-commits.sh",
+    "poll-cursor-status:prod": "NODE_ENV=production dotenv-flow pnpm poll-cursor-status",
+    "poll-cursor-status:staging": "NODE_ENV=staging dotenv-flow pnpm poll-cursor-status",
+    "poll-cursor-status": "vite-node src/services/cursor/jobs/pollCursorAgentStatusJob.ts",
+    "poll-jira:prod": "NODE_ENV=production dotenv-flow pnpm poll-jira",
+    "poll-jira:staging": "NODE_ENV=staging dotenv-flow pnpm poll-jira",
+    "poll-jira": "vite-node src/services/jira/jobs/pollJiraTicketsJob.ts",
+    "start": "NODE_ENV=production node dist/main.js",
+    "test:coverage": "pnpm test --coverage",
+    "test:run": "pnpm test run",
+    "test:ui": "pnpm test --ui",
+    "test": "vitest --project unit"
   },
   "dependencies": {
     "@ai-sdk/azure": "^2.0.89",
@@ -62,6 +63,7 @@
     "@mastra/server": "^1.2.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.69.0",
+    "@opentelemetry/context-async-hooks": "^2.5.0",
     "@opentelemetry/core": "^2.5.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.211.0",
     "@opentelemetry/resources": "^2.2.0",
@@ -87,7 +89,8 @@
     "query-string": "^9.3.1",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
-    "yarn": "^1.22.22",
+    "winston-transport": "^4.9.0",
+    "yaml": "^2.8.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
