Add api to common yml

--- a/environments/common.yaml
+++ b/environments/common.yaml
@@ -10,6 +10,7 @@ env:
   EVERGREEN_API_URL: https://evergreen.mongodb.com/rest/v2
   EVERGREEN_URL: https://evergreen.mongodb.com
   EVERGREEN_GRAPHQL_ENDPOINT: https://evergreen.mongodb.com/mcp/graphql/query
+  RUNTIME_ENVIRONMENTS_API_URL: http://devprod-images-web-app.devprod-runtime-environments.svc.cluster.local
   OTEL_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/traces
   SENTRY_DSN: https://3db76f0989faad4c102a8708fba9446f@o4504991346720768.ingest.us.sentry.io/4509905876942849
   SENTRY_ENABLED: true
