--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,7 @@ EVERGREEN_API_URL=http://localhost:9090/rest/v2
 EVERGREEN_GRAPHQL_ENDPOINT=http://localhost:9090/mcp/graphql/query
 EVERGREEN_URL=http://localhost:9090
 
+RUNTIME_ENVIRONMENTS_API_URL=http://devprod-images.staging.corp.mongodb.com/
+
 # DB
 MONGODB_URI=mongodb://localhost:27017
