--- a/environments/cronjobs/staging_deployments.yml
+++ b/environments/cronjobs/staging_deployments.yml
@@ -44,7 +44,7 @@ cronJobs:
     schedule: '*/5 * * * *' # Run every 5 minutes (matches prod schedule)
     suspend: true
     concurrencyPolicy: Forbid
-    command: ['yarn', 'poll-jira-ticket-status:staging']
+    command: ['pnpm', 'poll-jira-ticket-status:staging']
     resources:
       requests:
         cpu: 500m
