--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -170,6 +170,11 @@ tasks:
           xml_file_name: release_notes_evals.xml
   - name: runtime-environments-evals
     commands:
+      - func: setup-mongodb
+      - func: run-make-background
+        vars:
+          target: local-evergreen
+      - func: wait-for-evergreen
       - func: pnpm-eval
         vars:
           eval_dir: runtimeEnvironmentsAgent
@@ -242,6 +247,7 @@ functions:
       env:
         SETTINGS_OVERRIDE: file
         GOROOT: ${goroot}
+        STAGING_RUNTIME_ENVIRONMENTS_BASE_URL: ${STAGING_RUNTIME_ENVIRONMENTS_BASE_URL}
 
   setup-mongodb:
     - command: subprocess.exec
